package crypto.theblockchainpost.designpatterns.observer.interfaces;

public interface DisplayData {

    void display();

}
