package crypto.theblockchainpost.designpatterns.observer.interfaces;

public interface Observer {

    void update();

}
